added get endpoint for itineary
